# Sentiment_Analysis_comments

./: .gitignore  README.md  Summary_metrics.txt  debug_map.py  extract_top_entities.py  logic_changes_summary_metrics.txt  main.py  map_comments.py  notebook_viewer.ipynb  pyproject.toml  sentiment_analysis_model_list.csv
comments_data/: .~lock.entity_comments_details_20.csv#  entity_comment_counts.csv  entity_comment_counts_20.csv  entity_comments_details_20.csv
sentiment_analysis/: __init__.py  aggregator.py  batch_inference.py  main.py  metrics.py  model_loader.py  results_storage.py  sentiment_normalizer.py  visualization_utils.py
sentiment_analysis/outputs/: sentiment_comparison.csv  sentiment_results_FacebookAI_xlm_roberta_base.csv  sentiment_results_ai4bharat_indic_bert.csv  sentiment_results_cardiffnlp_twitter_xlm_roberta_base_sentiment.csv  sentiment_results_google_muril_base_cased.csv  summary_comparison.csv
sentiment_analysis/outputs/FacebookAI_xlm_roberta_base/: FacebookAI_xlm_roberta_base_predictions.csv
sentiment_analysis/outputs/ai4bharat_indic_bert/: ai4bharat_indic_bert_predictions.csv
sentiment_analysis/outputs/cardiffnlp_twitter_xlm_roberta_base_sentiment/: cardiffnlp_twitter_xlm_roberta_base_sentiment_predictions.csv
sentiment_analysis/outputs/google_muril_base_cased/: google_muril_base_cased_predictions.csv
sentiment_analysis/outputs/tabularisai_multilingual_sentiment_analysis/: tabularisai_multilingual_sentiment_analysis_predictions.csv
