[project]
name = "sentiment-analysis-comments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "pandas>=3.0.0",
    "transformers>=5.0.0",
    "torch>=2.0.0",
    "langdetect>=1.0.9",
    "accelerate>=0.20.0",
    "deep-translator>=1.11.4",
    "tqdm>=4.65.0",
    "tiktoken>=0.12.0",
    "sentencepiece>=0.2.1",
    "protobuf>=6.33.4",
]
